@@ -424,5 +424,29 @@ aes_gcm_pre_192_sse_no_aesni(const void *key, struct gcm_key_data *key_data);
 IMB_DLL_EXPORT void
 aes_gcm_pre_256_sse_no_aesni(const void *key, struct gcm_key_data *key_data);
 
+/*
+ * GHASH API for SSE/AVX/AVX2/AVX512/AESNI emulation
+ */
+
+IMB_DLL_EXPORT void
+ghash_sse(struct gcm_key_data *key_data, const void *in,
+          const uint64_t in_len, void *tag, const uint64_t tag_len);
+IMB_DLL_EXPORT void
+ghash_avx_gen2(struct gcm_key_data *key_data, const void *in,
+               const uint64_t in_len, void *tag,
+               const uint64_t tag_len);
+IMB_DLL_EXPORT void
+ghash_avx_gen4(struct gcm_key_data *key_data, const void *in,
+               const uint64_t in_len, void *tag,
+               const uint64_t tag_len);
+IMB_DLL_EXPORT void
+ghash_avx512(struct gcm_key_data *key_data, const void *in,
+             const uint64_t in_len, void *tag,
+             const uint64_t tag_len);
+IMB_DLL_EXPORT void
+ghash_vaes_avx512(struct gcm_key_data *key_data, const void *in,
+                  const uint64_t in_len, void *tag,
+                  const uint64_t tag_len);
+
 #endif /* _GCM_H_ */
 #endif /* NO_GCM */
