@@ -12,6 +12,7 @@ Library
 - AVX512 implementation of stitched DOCSIS cipher with CRC32 calculations
 - KASUMI-UEA1 and KASUMI-UIA1 algorithms added in job API (using cipher type
   KASUMI_UEA1_BITLEN and hash type KASUMI_UIA2)
+- New GHASH API added
 
 LibTestApp
 - Extended ZUC tests to validate ZUC-EEA3 and ZUC-EIA3 algorithms through
